--- a/forest/filescan_00.1
+++ b/forest/filescan_00.1
@@ -1,7 +1,8 @@
 beed                     ,--""+--.---------------rill
 blas                       _---------------toise
 bulb                                           /---------------asaur
-butt       ,-.                                            ___.._---------------erfree
+butt       ,-.
+                          ___.._---------------erfree
 beed                    /     j   /`.---------------rill
 blas            _,..-"""--' `,.-".---------------toise
 bulb                        _,.------....___,.' ',.-.---------------asaur
